# classifyos

./: .gitignore  API_RUNBOOK.md  CLAUDE.md  FIRST_RUN.md  PROJECT_STATE.md  README.md  RUNBOOK.md  api_short_desc.md  backend_short_desc.md  bugs.md  frontend_short_desc.md  plan_tweak.md  prompt.txt  run_tests.ps1  short_desc.md  transfer.txt  unwire.md
backend/: .env.example  pyproject.toml  requirements.txt  run_tests.ps1
backend/api/: artifacts.py  databricks.py  deps.py  jobs_store.py  main.py  mlflow_read.py  models.py  narrate.py  result_builder.py  serialize.py
backend/api/routes/: databricks.py  explain.py  health.py  input_sources.py  jobs.py  outputs.py  run.py  runs.py  upload.py
backend/classifyos/: cli.py  config.py  mlflow_logging.py  multilabel.py  predict.py  runner.py  split.py  tuning.py
backend/classifyos/analysis/: explain.py  feature_impact.py  llm_explain.py  permutation_importance.py  profile.py
backend/classifyos/envelope/: __init__.py  artifacts.py  result_builder.py  schema.py  serialize.py
backend/classifyos/evaluation/: curves.py  metrics.py  plots.py
backend/classifyos/io/: inspect.py  loader.py  sql_source.py  storage.py
backend/classifyos/models/: base.py  decision.py  registry.py  wrappers.py
backend/classifyos/preprocessing/: balance.py  features.py  interactions.py  preprocess.py  user_features.py
backend/scripts/: dev_run.py  generate_sample_data.py  seed_input_db.py
backend/tests/: conftest.py  test_api_databricks.py  test_api_explain.py  test_api_health.py  test_api_input_sources.py  test_api_jobs.py  test_api_narrate.py  test_api_outputs.py  test_api_run.py  test_api_runs.py  test_api_upload.py  test_balance.py  test_classify.py  test_cli.py  test_config.py  test_curves.py  test_decision.py  test_explain.py  test_feature_impact.py  test_features.py  test_inspect.py  test_interactions.py  test_llm_explain.py  test_loader.py  test_metrics.py  test_mlflow_logging.py  test_models.py  test_multilabel.py  test_narration_offload.py  test_plots.py  test_preprocess.py  test_profile.py  test_registry.py  test_runner.py  test_split.py  test_sql_source.py  test_storage.py  test_tuning.py  test_use_case_sweep.py  test_user_features.py
(+173 files in other folders)
