# Build metadata for packaging the ClassifyOS ML ENGINE as a wheel.
#
# Purpose (docs/databricks_integration.md §6.6 Step 2 / Enhancement 4a): produce
# `classifyos-<ver>-py3-none-any.whl` so the pure-Python engine can be installed on a
# Databricks cluster (`%pip install .../classifyos-*.whl`) and driven from a notebook,
# exactly as `cli.py` drives it locally. This is build tooling ONLY — no engine code
# changes; the engine was already a proper importable package.
#
# Scope: packages ONLY the `classifyos` engine (see [tool.setuptools.packages.find]
# below). The FastAPI `api` layer is deliberately NOT packaged — the engine stays
# web-free, so fastapi/uvicorn/pydantic are not runtime dependencies of the wheel.
#
#   cd backend/
#   pip install build
#   python -m build --wheel      # → dist/classifyos-1.0.0-py3-none-any.whl

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classifyos"
version = "1.0.0"
description = "ClassifyOS — ML classification engine for the insurance domain (pure-Python, web-free)."
requires-python = ">=3.11"

# Engine runtime dependencies. Version ranges are kept IDENTICAL to the "ML engine"
# section of backend/requirements.txt (single source of truth for what the engine needs
# at runtime). shap/optuna/mlflow/openai/psycopg2-binary are opt-in + lazily imported, but
# they are engine capabilities so they ship with the wheel like the rest. The API-only deps
# (fastapi, uvicorn, pydantic, python-multipart, python-dotenv) and the test deps are NOT
# listed here — they are not needed to run the engine on a cluster.
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "scikit-learn>=1.4,<2",
    "imbalanced-learn>=0.12,<1",
    "xgboost>=2.0,<4",
    "lightgbm>=4.0,<5",
    "matplotlib>=3.8,<4",
    "optuna>=3.6,<5",
    "shap>=0.46,<1",
    "openai>=1.40,<2",
    "mlflow>=3.1,<4",
    "SQLAlchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "joblib>=1.3",
    "openpyxl>=3.1",
    "pyarrow>=15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["classifyos*"]
